공부 및 프로젝트 정리 제작

--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
         }
 
         .card_button {
-            font-size: 25px;
+            font-size: 20px;
             width: 150px;
             height: 30px;
         }
@@ -43,24 +43,23 @@
             개발자를 꿈꾸는 김영훈입니다.<br>
             제 프로젝트를 소개합니다.</h3>
         <br>
-        <br>
     </div>
-    <div style="display:grid; grid-template-columns: 1fr 1fr 1fr;">
+    <div style="display:grid; grid-template-columns: 1fr 1fr;">
         <div class="card">
             <img class="card_img" src="./img/tennisMarket.jpg">
             <p class="card_title"> 테니스 마켓 </p>
-            <input class="card_button" type="button" value="order" onclick="location.href='/tennisMarket'">
+            <input class="card_button" type="button" value="자세히보러가기" onclick="location.href='/tennisMarket'">
         </div>
         <div class="card">
-            <img class="card_img" src="./img/blueRacket.png">
-            <p class="card_title"> Blue Racket </p>
-            <input class="card_button" type="button" value="order" onclick="location.href='/order?productId=2'">
+            <img class="card_img" src="./img/projectLog.jpg">
+            <p class="card_title"> 공부 및 프로젝트 정리 </p>
+            <input class="card_button" type="button" value="자세히보러가기" onclick="location.href='/projectLogList'">
         </div>
-        <div class="card">
+        <!-- <div class="card">
             <img class="card_img" src="./img/blackRacket.png">
             <p class="card_title"> Black Racket </p>
-            <input class="card_button" type="button" value="order" onclick="location.href='/order?productId=3'">
-        </div>
+            <input class="card_button" type="button" value="자세히보러가기" onclick="location.href='/order?productId=3'">
+        </div> -->
     </div>
 </body>
 
