--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <div class="card">
             <img class="card_img" src="./img/tennisMarket.jpg">
             <p class="card_title"> 테니스 마켓 </p>
-            <input class="card_button" type="button" value="자세히보러가기" onclick="location.href='./tennisMarket'">
+            <input class="card_button" type="button" value="자세히보러가기" onclick="location.href='tennisMarket.html'">
         </div>
         <div class="card">
             <img class="card_img" src="./img/projectLog.jpg">
             <p class="card_title"> 공부 및 프로젝트 정리 </p>
-            <input class="card_button" type="button" value="자세히보러가기" onclick="location.href='./projectLogList'">
+            <input class="card_button" type="button" value="자세히보러가기" onclick="location.href='projectLogList.html'">
         </div>
         <!-- <div class="card">
             <img class="card_img" src="./img/blackRacket.png">
