--- a/projectLogList.html
+++ b/projectLogList.html
@@ -19,7 +19,7 @@
 <body>
     <h1> 공부 및 프로젝트 정리 </h1>
     <div>
-        <a href="./"> go home </a>
+        <a href="/"> go home </a>
     </div>
     <div>
         <h3> Gihub </h3>
