--- a/tennisMarket.html
+++ b/tennisMarket.html
@@ -42,23 +42,23 @@
         Enjoy your shopping.
         <br>
         <br>
-        <a href="./tennisMarket/orderlist"> order list </a>
+        <a href="orderlist.html"> order list </a>
     </div>
     <div style="display:grid; grid-template-columns: 1fr 1fr 1fr;">
         <div class="card">
             <img class="card_img" src="./img/redRacket.png">
             <p class="card_title"> Red Racket </p>
-            <input class="card_button" type="button" value="order" onclick="location.href='./tennisMarket/order?productId=1'">
+            <input class="card_button" type="button" value="order" onclick="location.href='order.html'">
         </div>
         <div class="card">
             <img class="card_img" src="./img/blueRacket.png">
             <p class="card_title"> Blue Racket </p>
-            <input class="card_button" type="button" value="order" onclick="location.href='./tennisMarket/order?productId=2'">
+            <input class="card_button" type="button" value="order" onclick="location.href='order.html'">
         </div>
         <div class="card">
             <img class="card_img" src="./img/blackRacket.png">
             <p class="card_title"> Black Racket </p>
-            <input class="card_button" type="button" value="order" onclick="location.href='./tennisMarket/order?productId=3'">
+            <input class="card_button" type="button" value="order" onclick="location.href='order.html'">
         </div>
     </div>
 </body>
