--- a/order.html
+++ b/order.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title> Order List </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>order</title>
     <style>
         h1 {
             text-align: center;
         }
-
         div {
             text-align: center;
             margin-bottom: 50px;
@@ -17,11 +17,10 @@
 </head>
 
 <body>
-    <h1> Order List </h1>
+    <h1> order page </h1>
     <div>
         <a href="tennisMarket.html"> go home </a>
     </div>
-        
 </body>
 
 </html>
